src/index.css
@import "tailwindcss";

@layer base {
    body{
        padding: 0;
        margin: 0;
        box-sizing: border-box;
        overflow-x: hidden;
        min-width: 300px;
    }

    /* .imgContainer {
        display: flex;
    }

    .imgCard {
        width: 180px;
        position: relative;
        flex: 1;
    }

    .front, .back {
        width: 100%;
        height: 100%;
        position: absolute;
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        aspect-ratio: 3/2;
    }

    .back{
        padding: 10px;
    }

    .image {
        max-width: 100%;
        max-height: 100%;
        display: block;
    } */

    @media (min-width: 1024px) {
        body {
            overflow-y: hidden;
        }
    }

    .imgSection {
        transform: translateY(-100px);
        animation: scrollDown 16s ease-in-out infinite;
    }

    @keyframes scrollDown {
        0% { transform: translateY(-20px); }
        50% { transform: translateY(-300px); }
        100% { transform: translateY(-20px); }
    }
}

/* <div
                        className="imgSection grid grid-col-2 md:grid-cols-4 lg:grid-cols-6 gap-4 justify-center px-8 py-6"
                        ref={imgSectionRef}
                    >
                        {images.map((image, i) => (
                            <div className="imgContainer" key={i}>
                                <div className="imgCard">
                                    <div className="front">
                                        <img
                                            src={image.src}
                                            className="image lg:max-w-[180px] max-h-fit rounded-lg break-inside-avoid shadow-md w-full cursor-pointer hover:scale-105 card-flip"
                                            alt={`polaroid-${i}`}
                                        />
                                    </div>
                                    <div className="back">
                                        <p>{image.description}</p>
                                    </div>
                                </div>
                            </div>
                        ))}
                    </div> */

/* {images.map((image, index) => (
                    <div
                        key={index}
                        className="flip-card absolute"
                        style={{
                        top: image.top,
                        left: image.left,
                        width: "160px",
                        height: "auto",
                        }}
                    >
                        <div className="flip-card-inner">
                            <div className="flip-card-front">
                                <img
                                src={image.src}
                                alt={`memory-${index}`}
                                className="w-full h-auto rounded-lg shadow-md"
                                />
                            </div>
                            <div className="flip-card-back bg-white text-black rounded-lg p-2 text-center">
                                <p>{image.description}</p>
                            </div>
                        </div>
                    </div>
                ))} */

